# study-project

./: .clang-format  .editorconfig  .gitignore  .gitmodules  README.md  build.sh
.github/workflows/: c.yml  commit-lint.yml  latex-commit.yml  latex-release.yml
Thesis/: Bibliography.bib  Thesis.tex  Variables.tex
Thesis/Assets/Images/2-Grundlagen/: Gleisplan-Einfacher-Bahnhof.drawio  Modelleisenbahnen.drawio
Thesis/Assets/Images/4-Entwicklung-der-GFA/: Weiche.drawio
Thesis/Assets/Images/5-Entwicklung-des-Stellwerks/: Bahnhof.drawio
Thesis/Preamble/: Coding.tex  Packages.tex  Settings.tex
Thesis/Structure/: 1_Title.tex  2_Non-Disclosure-Notice.tex  3_Declaration.tex  4_Abstract.tex  5_Tabe-of-Contents.tex  6_Acronyms.tex  7_Text.tex  8_Glossary.tex  9_Appendix.tex
Thesis/Text/1-Einleitung/: Einleitung.tex
Thesis/Text/2-Grundlagen/: 2-Grundlagen.tex  Gleisfreimeldung.tex  Stellwerkstechnik.tex  Steuerung-von-Modelleisenbahnen.tex
Thesis/Text/3-Methodik/: 3-Methodik.tex  Achszähler.tex  Aufbau-des-Systems.tex  Kommunikation.tex  Systemkonfiguration.tex
Thesis/Text/4-Entwicklung-der-GFA/: 4-Entwicklung-der-GFA.tex  Achszähler.tex  Gleisfreimeldung.tex  Hardwaretests.tex  Softwaretests.tex
Thesis/Text/5-Entwicklung-des-Stellwerks/: 5-Entwicklung-des-Stellwerks.tex  Bedienung.tex  Fahrstraßenlogik.tex  Gleisfreimeldeanlage.tex  Probleme-bei-der-Kommunikation.tex  Signaldecoder.tex  Weichendecoder.tex
Thesis/Text/6-Auswertung/: 6-Auswertung.tex  Fahrstraßenlogik.tex  Gleisfreimeldung.tex  Probleme.tex
Thesis/Text/7-Fazit-und-Ausblick/: 7-Fazit-und-Ausblick.tex
Thesis/i18n/: de.tex  en.tex
mini-rail/: .clang-format  .clang-tidy  CMakeLists.txt
mini-rail/apps/: CMakeLists.txt
mini-rail/apps/debug-detection/: CMakeLists.txt
mini-rail/apps/debug-detection/src/: debug-detection.c
mini-rail/apps/src/: mini-rail-ui.c  mini-rail.c
mini-rail/docs/: messaging.md
mini-rail/embedded/: CMakeLists.txt
mini-rail/embedded/blink/: CMakeLists.txt
mini-rail/embedded/blink/src/: blink.c
mini-rail/embedded/src/: can-serial-bridge.c  decoder.c  signal-decoder.c  vacancy-detection-reed.c
mini-rail/embedded/vacancy-detection-reed/: CMakeLists.txt
mini-rail/embedded/vacancy-detection-reed/src/: vacancy-detection-reed.c
mini-rail/examples/: simple-layout-1-ddl.sql  simple-layout-1-dml.sql  simple-layout-1.sqlite
mini-rail/include/: bin.h  error.h  graph.h  serial.h  stb_ds_helper.h  str.h
mini-rail/include/rail/: controller.h  database.h  decoder.h  element.h  error.h  graph.h  interlocking.h  messaging.h  signal.h  switch.h  ui.h  vacancy.h
mini-rail/lib/error/: CMakeLists.txt
mini-rail/lib/graph/: CMakeLists.txt
mini-rail/lib/graph/src/: depth-first-search.c  graph.c
mini-rail/lib/stb_ds_helper/: CMakeLists.txt
mini-rail/lib/stb_ds_helper/src/: stb-ds-helper.c
mini-rail/lib/str.c/: CMakeLists.txt
mini-rail/lib/str.c/src/: str.c
mini-rail/modules/: CMakeLists.txt
mini-rail/modules/database/: CMakeLists.txt
mini-rail/modules/error/: CMakeLists.txt
mini-rail/modules/error/src/: error.c
mini-rail/modules/graph/: CMakeLists.txt
mini-rail/modules/interlocking/: CMakeLists.txt
mini-rail/modules/interlocking/src/: block.c  database-ui.c  database.c  element.c  interlocking.c  open-track.c  signal.c  switch.c
mini-rail/modules/serial/: CMakeLists.txt
mini-rail/modules/serial/src/: serial.c
mini-rail/modules/stb_ds_helper/: CMakeLists.txt
mini-rail/modules/vacancy-detection/: CMakeLists.txt
mini-rail/modules/vacancy-detection/src/: contact-counter.c  contact-point.c  vacancy-detection.c
mini-rail/research/: CMakeLists.txt
mini-rail/research/hall/: CMakeLists.txt
mini-rail/research/reed/: CMakeLists.txt
mini-rail/research/reed/src/: reed-multi.c
mini-rail/research/src/: can-dummy-controller.c  can-hello.c  can-master.c  can-slave.c  hall.c  reed.c  uart.c
mini-rail/test/: CMakeLists.txt
mini-rail/test/graph-test/: CMakeLists.txt
mini-rail/test/graph-test/src/: graph-test.c
mini-rail/test/interlocking-test/: CMakeLists.txt
mini-rail/test/src/: assert.h  bin-test.c  database-test.c  graph-test.c  interlocking-test.c  messaging-test.c  serial-listener-test.c  vacancy-detection-test-straight.c  vacancy-detection-test-switch.c
mini-rail/test/vacancy-detection-test/: CMakeLists.txt
mini-rail/test/vacancy-detection-test/src/: assert.c  vacancy-detection-test-straight.c  vacancy-detection-test-switch.c
rail/: .env  Makefile
rail/embedded/: CMakeLists.txt
rail/embedded/blink/: blink.c
rail/include/rail/: error.h  vacancy-detection.h
rail/modules/debug-detection/: Makefile
rail/modules/error/: Makefile
rail/modules/test/: Makefile
rail/modules/test/src/: test.c
rail/modules/vacancy-detection/: Makefile
rail/modules/vacancy-detection/src/: vacancy-detection.c  vacancy.c
